--- a/base/src/index.html
+++ b/base/src/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>ReactRouter</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="../res/styles/main.css">
 </head>
-<body>
+<body ontouchstart="">
 	<div id="app"></div>
 </body>
 </html>
