--- a/base/src/index.html
+++ b/base/src/index.html
@@ -6,6 +6,6 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body ontouchstart="">
-	<div id="app"></div>
+  <div id="app" class="container"></div>
 </body>
 </html>
