--- a/base/src/index.html
+++ b/base/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>LZS</title>
+  <title>LZS_m/title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body ontouchstart="">
