更新router至v3.x版本～不需要使用withRouter导出模块也可以在this.props.router拿到router对象了

--- a/base/src/index.html
+++ b/base/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>LZS_m/title>
+  <title>LZS</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body ontouchstart="">
